Use mandrel packaging